Fixed title bug on small screen

--- a/portfolio-home/css/styles.css
+++ b/portfolio-home/css/styles.css
@@ -106,7 +106,7 @@ body {
   /* Header */
   .navbar-brand h1 { /* Restaurant name */
     padding-top: 5px;
-    font-size: 4.4vw;
+    font-size: 4vw;
   }
 
 }
